// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox should render input successfully 1`] = `
<body>
  <div>
    <label
      class="container-checkbox relative"
    >
      <input
        class="absolute opacity-0 cursor-pointer h-0 w-0"
        type="checkbox"
      />
      <span
        class="checkmark absolute top-0 left-0 h-[16px] w-[16px] bg-neutral-white border-[1px] border-solid border-neutral-border  after:boder-t-0 after:border-r-2 after:border-b-2 after:border-l-0 after:content-[''] after:absolute after:hidden after:left-[5px] after:top-[2px] after:w-[5px] after:h-[10px] after:border-solid after:border-neutral-white after:rotate-45"
      />
    </label>
  </div>
</body>
`;

exports[`Radio should render input successfully 1`] = `
<body>
  <div>
    <label
      class="container-radio flex items-center "
    >
      <input
        class="m-0 invisible radio-input"
        name="radio"
        type="radio"
        value="radio"
      />
      <span
        class="custom-radio  w-[16px] h-[16px] border-2 border-solid border-neutral-border rounded-[50%] inline-block relative after:content[''] after:w-[8px] after:h-[8px] after:bg-primary-clicked after:absolute after:rounded-[50%] after:top-1/2 after:left-1/2 after:translate-x-[-50%] after:translate-y-[-50%] after:opacity-0	after:transition-[opacity]"
      />
      <span
        class=""
      />
    </label>
  </div>
</body>
`;

exports[`Switch should render input successfully 1`] = `
<body>
  <div>
    <div
      class="w-12 h-6 flex items-center rounded-full p-1 cursor-pointer bg-primary-clicked"
    >
      <div
        class="bg-white h-5 w-5 rounded-full shadow-md transform duration-300 ease-in-out transform translate-x-5"
      />
    </div>
  </div>
</body>
`;

exports[`Tag should render input successfully 1`] = `
<body>
  <div>
    <div
      class="px-2 py-1 w-fit bg-success-bg border-[1px] border-solid border-success-base"
    >
      <div
        class="text-success-border"
      >
        Publish
      </div>
    </div>
  </div>
</body>
`;
